#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[workspace]

members = [
  "zenoh-flow-example-types",
  "simple-pipeline",
  "video-pipeline",
  "face-detection",
  "frame-concat",
  "object-detection-dnn",
  "sum-and-send",
  "example-buzz",
  "example-fizz",
  "generic-sink",
  "video-sink",
  "camera-source",
  "counter-source",
  "manual-source",
  "random-source",
  "video-file-source",
  "runtime",
  "run-record-replay",
  "turtlebot3-source",
]

[profile.dev]
debug=true
opt-level = 0


[profile.release]
debug=true
lto="fat"
codegen-units=1
opt-level=3
panic="abort"
