[package]
name = "example-buzz"
version = "0.1.0"
repository = "https://github.com/atolab/zenoh-flow-examples"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh Flow Examples"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
zenoh-flow-example-types = { path = "../zenoh-flow-example-types" }

[lib]
name = "example_buzz"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "example-buzz"
kind = "operator"
inputs=[ {id ="Int", type="int"}, {id ="Str", type="str"}]
outputs=[ {id ="Str", type="str"}]

