[workspace]
members = [
    "arequipa",
    "barcelona",
    "cordoba",
    "delhi",
    "freeport",
    "geneva",
    "georgetown",
    "hamburg",
    "hebron",
    "kingston",
    "lyon",
    "mandalay",
    "madelin",
    "monaco",
    "osaka",
    "ponce",
    "portsmouth",
    "rotterdam",
    "taipei",
    "tripoli",
    "datatypes",
    "nodes",
]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
