#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[workspace]
members = [
    "arequipa",
    "barcelona",
    "cordoba",
    "datatypes",
    "delhi",
    "freeport",
    "geneva",
    "georgetown",
    "hamburg",
    "hebron",
    "kingston",
    "lyon",
    "madelin",
    "mandalay",
    "monaco",
    "osaka",
    "ponce",
    "portsmouth",
    "rotterdam",
    "taipei",
    "tripoli",
]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
lto="fat"
codegen-units=1
opt-level=3
panic="abort"

[workspace.dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
async-trait = "0.1.50"
futures = "0.3.28"
prost = "0.11"
rand = "0.8.0"
zenoh-flow = "0.5.0-alpha.1"