#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "object-detection-dnn"
version = "0.1.0"
repository = "https://github.com/atolab/zenoh-flow-examples"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh Flow Examples"
readme = "README.md"

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes","unstable"] }
zenoh-flow = "0.4.0"
async-trait = "0.1.50"
zenoh-flow-example-types = { path = "../zenoh-flow-example-types" }
opencv = "0.53.0"

[lib]
name = "object_detection_dnn"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "object-detection-dnn"
kind = "operator"
inputs=[ {id ="Frame", type="bytes"}]
outputs=[ {id ="Frame", type="bytes"}]