[package]
name = "python-source"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
async-trait = "0.1"
pyo3 = "0.14.5"
zenoh-flow-example-types = { path = "../zenoh-flow-example-types" }

[lib]
name = "python_source"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "python-source"
kind = "source"
outputs=[ {id ="Data", type="int"}]

