#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "runtime"
version = "0.1.0"
edition = "2018"

[dependencies]
async-ctrlc ={version = "1.2.0", features = ["stream"]}
async-std = { version = "=1.11.0", features = ["attributes"] }
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master"}
clap = { version = "3.1.1", features = ["derive"] }
log = "0.4"
serde_yaml = "0.8.13"
uhlc = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.9"
