[package]
name = "turtlebot3-source"
version = "0.1.0"
repository = "https://github.com/atolab/zenoh-flow-examples"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh Flow Examples"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.11.0", features = ["attributes","unstable"] }
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
async-trait = "0.1"
dynamixel2 = { version = "0.3.1", features = ["log"] }
cdr = "0.2.4"
zenoh-flow-example-types = { path = "../zenoh-flow-example-types" }

[lib]
name = "tb3_source"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "turtlebot3-source"
kind = "source"
outputs=[ {id ="RobotData", type="bytes"}]
