[package]
name = "video-sink"
version = "0.1.0"
repository = "https://github.com/atolab/zenoh-flow-examples"
homepage = "http://zenoh.io"
authors = ["kydos <angelo@icorsaro.net>",
           "gabrik <gabriele.baldoni@gmail.com>",
           "Julien Loudet <julien.loudet@adlinktech.com>",]
edition = "2018"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh Flow Examples"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.10.0", features = ["attributes","unstable"] }
opencv = "0.53.0"
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
async-trait = "0.1"

[lib]
name = "video_sink"
crate-type=["cdylib"]
path="src/lib.rs"

[package.metadata.zenohflow]
id = "video-sink"
kind = "sink"
inputs=[ {id ="Frame", type="bytes"}]

