[package]
name = "datatypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
prost = "0.9"
rand = "0.8.4"
prost-build = "0.9"
chrono = "0.4"
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }

[build-dependencies]
prost-build = "0.9"
chrono = "0.4"
