#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "datatypes"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.1"
prost = "0.11"
rand = "0.8.4"
prost-build = "0.11"
chrono = "0.4"
zenoh-flow = "=0.4.0-alpha.2"

[build-dependencies]
prost-build = "0.11"
chrono = "0.4"
