#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "hamburg"
version = "0.1.0"
edition = "2018"

[lib]
name = "hamburg"
crate-type=["cdylib"]
path="src/lib.rs"

[dependencies]
async-std = { version = "=1.12.0", features = ["attributes"] }
datatypes = { path = "../datatypes" }

async-trait = "0.1.50"
zenoh-flow = "=0.4.0-alpha.1"
futures = "0.3.5"

