[package]
name = "nodes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
env_logger = "0.9"
serde = { version = "1.0.55", features = ["derive"] }
async-std = { version = "=1.10.0", features = ["attributes"] }
typetag = "0.1"
log = "0.4"
bincode = "1"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
uhlc = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "0.1.50"
futures = "0.3.5"
rand = "0.8.0"
serde_json = "1.0.78"
prost = "0.9"
prost-types = "0.9"
datatypes = { path = "../datatypes" }