#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "nodes"
version = "0.1.0"
edition = "2021"

[dependencies]
# zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "dev/v0.4.0"}
env_logger = "0.9"
serde = { version = "1.0.55", features = ["derive"] }
async-std = { version = "=1.12.0", features = ["attributes"] }
typetag = "0.1"
log = "0.4"
bincode = "1"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
uhlc = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "0.1.50"
futures = "0.3.5"
rand = "0.8.0"
serde_json = "1.0.78"
prost = "0.9"
prost-types = "0.9"
datatypes = { path = "../datatypes" }
