#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "taipei"
version = "0.1.0"
edition = "2018"

[lib]
name = "taipei"
crate-type=["cdylib"]
path="src/lib.rs"

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
datatypes = { path = "../datatypes" }
futures = { workspace = true }
prost = { workspace = true }
zenoh-flow = { workspace = true }
