[package]
name = "cv-source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "=1.0.145"
async-std = { version = "=1.12.0", features = ["attributes","unstable"] }
opencv = "0.71.0"
zenoh-flow = "0.4.0"
async-trait = "0.1.58"
serde_json = "1.0.87"

[lib]
name = "cv_source"
crate-type=["cdylib"]
path="src/lib.rs"
