[package]
name = "cv-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive"] }
async-std = { version = "=1.12.0", features = ["attributes"] }
opencv = "0.71.0"
serde = "=1.0.145"
serde_yaml = "0.9.14"
zenoh = "0.6.0-beta.1"
zenoh-buffers = "0.6.0-beta.1"
futures = "=0.3.24"
