[package]
name = "pb-source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "=1.0.145"
async-std = { version = "=1.12.0", features = ["attributes","unstable"] }
zenoh-flow = "0.4.0"
async-trait = "0.1.58"
serde_json = "1.0.87"
protobuf-types = { path = "../../protobuf-types" }

[lib]
name = "pb_source"
crate-type=["cdylib"]
path="src/lib.rs"
