#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "zenoh-sub"
version = "0.1.0"
edition = "2018"

[dependencies]
zenoh-flow = { workspace = true }
async-trait = { workspace = true }
async-std = { workspace = true }
zenoh = { version = "=0.7.0-rc" }
flume = "0.10.14"

[lib]
crate-type=["cdylib"]